WIP: Load Shedding Integration

--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -807,6 +807,12 @@ libsoundtouch==0.8
 # homeassistant.components.life360
 life360==5.5.0
 
+# homeassistant.components.load_shedding
+load-shedding==0.7.1
+
+# homeassistant.components.load_shedding
+load-shedding==0.7.1
+
 # homeassistant.components.logi_circle
 logi_circle==0.2.3
 
