--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -668,6 +668,10 @@ build.json @home-assistant/supervisor
 /tests/components/livisi/ @StefanIacobLivisi @planbnet
 /homeassistant/components/local_calendar/ @allenporter
 /tests/components/local_calendar/ @allenporter
+/homeassistant/components/litterrobot/ @natekspencer
+/tests/components/litterrobot/ @natekspencer
+/homeassistant/components/load_shedding/ @wernerhp
+/tests/components/load_shedding/ @wernerhp
 /homeassistant/components/local_ip/ @issacg
 /tests/components/local_ip/ @issacg
 /homeassistant/components/lock/ @home-assistant/core
