--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1072,6 +1072,12 @@ limitlessled==1.1.3
 # homeassistant.components.linode
 linode-api==4.1.9b1
 
+# homeassistant.components.lametric
+lmnotify==0.0.4
+
+# homeassistant.components.load_shedding
+load-shedding==0.7.1
+
 # homeassistant.components.google_maps
 locationsharinglib==5.0.1
 
